frontend/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
*{
    margin: 0;padding: 0;
}
:root{
    --font-size: 1.5rem;
    --dark-grey : #3d3a36;
    --light-grey : #f5f5eee1;
    --white:#feffff;
    --primarycolor :#FF9149;
    --space: 20px;
    --heading-font : ;
    --Navigation-font:'Sulphur Point'; 
    --transition: 0.3s ease-in-out ;
    --transitionOut: 0.3s ease-out ;
   }
 html, body{
    scroll-behavior: smooth;
}

body{
    background-color: var(--light-grey);
    box-sizing: border-box;
    margin: 0;
    overflow-x: hidden; 
}
header{
    width: 100vw;
    height: 10vh;
    display: flex;
    justify-content: center;
    gap: 20px;
    align-items: center;
    margin: 0 auto;
    margin-top: 1vw;
    position: sticky;
    top: 0%;
    z-index: 100;
    transition: var(--transitionOut);
}
.header{
    width: 80%;
    margin-top: 1vw;
}
.scrolled{
    background-color: #e6e1daee;
}
.logo{
    width: 10%;
    height: 100%;      
    display: flex;
    justify-content: center;
    align-items: center;
}
#logo{
    width: 70px;
    margin-top: 10px;
}
#search, #profile,#cart {
    width: 32px;
}
nav{
    width: 20%;
    height: 100%;
    display: flex;
    justify-content:flex-start;
    align-items: center;
}
ul {
    display: flex;
    gap: 25px;
}
ul li{
    list-style: none;
    font-size: var(--font-size);
    font-family: var(--Navigation-font);
    cursor: pointer;
}
li:hover{
    transform: translateY(-08px);
    transition: var(--transition);
    color :var(--primarycolor);
}
.search-bar{
    width: 30%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
.search-bar input{
    background-color: rgb(255, 255, 255);
    border: none;
    width: 70%;
    height: 60%;
    border-radius: 4px;
    padding-left: 15px;
}
::placeholder {
    font-size: 18px;
}
.personalization{
    width: 20%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}
hr{
    width: 85%;
    margin: auto; 
}
/* Code For Hero Section content */
section{
     width: 100vw;
     height: 90vh;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto; 
     row-gap: 0px;
}
.left-content, .right-content{
    height: 80vh;  
}
h1{
    font-family: "Raleway", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-size: 70px;
    margin-top: 08vw;
    margin-left: 8vw;
    
}
.text{
    color: var(--primarycolor);
}
p{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1.5rem;
    text-align: center;
    font-weight: lighter;
    margin: 1vw 5vw;
} 
.right-content{
    display: flex;
    justify-content: flex-start;
}
.Slider{
    margin-left: 2vw;
    width: 40vw;
    height: 80%;
    position: relative;
    top:8%;
    left: 10%;
}
.Slider img {
    object-fit: cover;
    height: 100%;
    position: relative;
  }
.animated-img {
    animation: rippleZoom 1.2s ease forwards;
  }
  @keyframes rippleZoom {
    0% {
      transform: scale(1) translateZ(0);
      filter: blur(0px);
      opacity: 1;
    }
    50% {
      transform: scale(1.05);
      filter: blur(2px);
    }
    100% {
      transform: scale(1);
      filter: blur(0px);
    }
  }
 
/* Animated logos   */
 .logos-slider{
    mask-image: linear-gradient(to right, transparent 10%, #c2b8b8 40%, #c2b8b8 60%, transparent 95%);
    grid-column: 1 / -1;
    height: 13vh;
    border: 2pxx solid;
    /* margin-top: 20px; */
    display: flex;
    align-items: center;
    gap: 200px;
    overflow: hidden;
}
.slide{
    width: 100%;
min-height:120px;
display : flex;
justify-content: center;
align-items: center;
/* background-color: purple; */
}
 .item{
    width: 20%;
    height: 08vh;
    position: absolute;
    display: flex;
    align-items: center;
    left: 100%;
    animation: automove 12s linear infinite;
    animation-delay: calc((10s /10) * (var(--position) - 1))!important;
}  
.item img{
width: 120px;
height: 120px;
object-fit: cover;
}  
@keyframes automove {
    0%{
        left: 100%
    }
    100%{
        left : -100%
    }
}
.Personalized-Feature{
    display: flex;
    gap: 30px;
    position: relative;
    left: 75vw;
    width: 20vw;
    top: 12vh;
    justify-content: center;
}
.Personalized-Feature button{
    font-family: var(--Navigation-font);
    font-size: 1.2rem;
    padding: 10px;
    background:none;
    border: none;
    cursor: pointer;
}

/* Filter Feature */
.filter-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 20vw;
    height: 100vh;
    background: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    padding: 20px;
    z-index: 2000;
    transition: transform 0.3s ease-in-out;
    font-family: var(--Navigation-font);
}
.hidden {
    transform: translateX(-100%);
}
.close-btn {
    position: absolute;
    top: 25px;
    right: 35px;
    font-size: large;
    font-weight: 800;
    cursor: pointer;
    z-index: 1000;
}
.filter{
    width: fit-content;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}
#filter{
    width: 30px;
}
.filterOption{
    margin-top: 2vh;
    display: flex;
    flex-direction: column;
    gap: 5px;
    font-family: var(--Navigation-font);
}
.options{
    margin-top: 8vh;
}
.slection{
    width:70vw;
    height: 5vh;
    position: relative;
    top: 3vw;
    left: 5%;
    display: flex;
    align-items: center;
    gap: 10px;
    flex-direction: row-reverse;
}
.selected{
    text-align: center;
    background-color:var(--primarycolor);
    border-radius: 3px;
    width:fit-content;
    height: 5vh;
    display: flex;
    align-items: center;
    padding: 5px;
    justify-content: center;
    gap: 15px;
    visibility: hidden;
    font-family: var(--Navigation-font);
}
.selected span{
cursor: pointer;
font-weight: 700;
}

/* Products Showcase Code */
.products{
    margin: 5% 6%;
    width: 100vw;
    height: fit-content;
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
    margin-top: 8vw;
}

.card{
    width: 20vmax;
    height: 50vh;
    display: flex;
    border-radius: 5px;
    flex-direction: column;
    align-items: center;
    background-color: white;
    box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.2);
}

.product-info{
    display:flex; 
    width: 84%;
    height: 30px;
    align-items: center;
    margin-top: 5px;
    justify-content: space-between;
    align-items: center;
}
.product-img{
    width: 85%;
    height: 70%;
    object-fit: cover;
    margin-top: 10px;
    border-radius: 4px;
}

.buy {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 84%;
  height: 40%;
  align-items: center;
  flex-direction: row-reverse;
}

.buy-btn {
    padding: 10px 20px;
    background-color: var(--primarycolor);
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
  }
footer{
    width: 100vw;
    height: 10vh;
    margin-bottom: 0px;
    margin-top: 5vh;
    background-color: rgba(0, 0, 0, 0.925);
    color: var(--primarycolor);
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: var(--Navigation-font);
}

